# twill-rs

./: .clinerules  Cargo.toml  Makefile.toml  README.md  parser-rs-code-review.md
core/: Cargo.toml
core/benches/: binary_operator_benchmark.rs  parser_benchmark.rs
core/examples/: hello_world.rs  json_char.rs
core/src/: combinators.rs  core.rs  element.rs  lib.rs  parse_context.rs  parse_result.rs  parser.rs
core/src/combinators/: elements_combinators.rs  offset_combinators.rs  skip_combinators.rs  take_combinators.rs
core/src/core/: combinators.rs  operator_parser.rs  parse_context.rs  parse_error.rs  parse_result.rs  parse_state.rs  parser.rs  parser_ext.rs  parser_monad.rs  parser_test.rs  rc_parser.rs  util.rs
core/src/core/parser/: and_then_parser.rs  attempt_parser.rs  binary_operator_parser.rs  choice_parser.rs  collect_parser.rs  combinators.rs  conversion_parser.rs  fn_once_parser.rs  fn_parser.rs  logging_parser.rs  offset_parser.rs  operator_parser.rs  or_parser.rs  parser_monad.rs  rc_parser.rs  repeat_parser.rs  sequence_parser.rs  skip_parser.rs  transform_parser.rs
core/src/core/parser/combinators/: elements.rs  elements_combinators.rs  offset_combinators.rs  take_combinators.rs
core/src/examples/: string_parser.rs
core/src/parser/: and_then_parser.rs  attempt_parser.rs  binary_operator_parser.rs  collect_parser.rs  conversion_parser.rs  logging_parser.rs  offset_parser.rs  opt_parser.rs  or_parser.rs  parser_monad.rs  repeat_parser.rs  skip_parser.rs  transform_parser.rs
core/src/util/: set.rs
core2/: Cargo.toml  lib.rs
(+31 files in other folders)
