[package]
name = "twill-core"
version = "1.0.0"
edition = "2021"
description = "A Rust crate for parser combinators"
license = "MIT OR Apache-2.0"
keywords = [ "parser", "combinator" ]
categories = [ "parsing" ]
readme = "README.md"
repository = "https://github.com/j5ik2o/oni-comb-rs"

[badges.github]
repository = "j5ik2o/parser-rs"
workflow = "Rust"

[dependencies]
log = "0.4.21"
regex = "1.10.4"
fnv = "1.0.7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false
